# Gwent

./: .replit  README.md  pyproject.toml  replit.md
attached_assets/: Pasted--Python-FastAPI-PostgreSQL--1775994612452_1775994612452.txt
services/: README.md  docker-compose.yml
services/card/: requirements-dev.txt  setup.cfg
services/card/app/: main.py  models.py  seed.py  storage.py
services/card/app/routers/: cards.py
services/card/tests/: test_cards.py  test_deck_integration.py  test_random.py
services/game/: requirements.txt
services/game/app/: game_logic.py  http_client.py  main.py  models.py  storage.py
services/game/app/routers/: games.py
services/game/tests/: test_games.py  test_moves.py
services/gateway/: .pre-commit-config.yaml  pyproject.toml
services/gateway/app/: auth.py  config.py  main.py
services/gateway/tests/: test_gateway.py
services/user_deck/app/: auth.py  http_client.py  main.py  models.py  storage.py
services/user_deck/app/routers/: decks.py  users.py
services/user_deck/tests/: test_deck_cards.py  test_decks.py  test_users.py
