[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "fastapi>=0.135.3",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "uvicorn[standard]>=0.44.0",
]
